environments/prod/ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zerotheft-prod-ingress
  namespace: zerotheft-prod
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
spec:
  ingressClassName: alb
  rules:
    - host: api.zerotheft.com
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: prod-auth-service
                port:
                  number: 80
          - path: /billing
            pathType: Prefix
            backend:
              service:
                name: prod-billing-service
                port:
                  number: 80
    - host: app.zerotheft.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prod-saas-app
                port:
                  number: 80
